# plasma-applet-qalculate

./: .cmake-format.yaml  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  CODE_OF_CONDUCT.md  COPYING  README.md
.cmake/: FindReadline.cmake
.github/: CHANGELOG.md
.github/actions/arch/: Dockerfile  build_plugin.sh
.github/actions/ubuntu_18.04/: Dockerfile
.github/actions/ubuntu_20.04/: Dockerfile
.github/actions/ubuntu_20.10/: Dockerfile
.github/actions/ubuntu_21.04/: Dockerfile
.github/actions/ubuntu_21.10/: Dockerfile
.github/actions/ubuntu_22.04/: Dockerfile  action.yml  build_plugin.sh
.github/actions/ubuntu_22.10/: Dockerfile
.github/actions/ubuntu_23.04/: Dockerfile
.github/local_test/: arch_linux.dockerfile  ubuntu_18.04.dockerfile  ubuntu_20.04.dockerfile  ubuntu_20.10.dockerfile  ubuntu_21.04.dockerfile  ubuntu_21.10.dockerfile  ubuntu_22.04.dockerfile  ubuntu_22.10.dockerfile  ubuntu_23.04.dockerfile
.github/workflows/: arch.yml  ubuntu-18.04.yml  ubuntu-20.04.yml  ubuntu-20.10.yml  ubuntu-21.04.yml  ubuntu-21.10.yml  ubuntu-22.04.yml  ubuntu-22.10.yml  ubuntu-23.04.yml
ci/: arch_linux.dockerfile  build-docker.sh  ubuntu_18.04.dockerfile  ubuntu_19.04.dockerfile  ubuntu_19.10.dockerfile  ubuntu_20.04.dockerfile  ubuntu_20.10.dockerfile
cmake/: FindReadline.cmake
debian/: changelog  control  copyright  gbp.conf  postinst  prefix.sh  rules  watch
debian/patches/: 000-plasmoid-metadata.patch  series
debian/source/: lintian-overrides
debian/tests/: control
debian/upstream/: metadata
package/: metadata.json
package/contents/code/: tools.js
package/contents/config/: config.qml
package/contents/ui/: FullRepresentation.qml  main.qml
package/contents/ui/config/: Currency.qml  General.qml  Input.qml  Output.qml
plasmoid/: metadata.desktop
plasmoid/contents/code/: tools.js
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  FullRepresentationFailed.qml  QWrapper.qml  Qalculate.qml
plasmoid/contents/ui/config/: Currency.qml  Evaluation.qml  General.qml  Input.qml  Output.qml  Print.qml
plugin/: .clang-format  CMakeLists.txt  Iqalculate.h  conversion.cpp  plasmoidplugin.cpp  plasmoidplugin.h  preprocessor.cpp  qalculate.cpp  qalculate.h  qalculateplugin.cpp  qalculateplugin.h  qmldir  qwrapper.cpp  qwrapper.h
plugin/tests/: CMakeLists.txt  fixture.h  helpers.cpp  helpers.h  main.cpp  preprocessor_assign.cpp
translate/: README.md  de.po  es.po  extract_messages.sh  fr.po  hr.po  pt.po  ru.po  template.pot
translations/: CMakeLists.txt  Messages.sh  TRANSLATORS_README  TRANSLATORS_README.md  extract-messages.sh  update-translations.sh
translations/po/: plasma_applet_org.kde.plasma.qalculate.pot  plasma_applet_org.kde.plasma.qalculate_de.po  plasma_applet_org.kde.plasma.qalculate_en.po  plasma_applet_org.kde.plasma.qalculate_es.po  plasma_applet_org.kde.plasma.qalculate_hr.po  plasma_applet_org.kde.plasma.qalculate_pt.po  plasma_applet_org.kde.plasma.qalculate_ru.po  plasma_applet_qalculate.pot  plasma_applet_qalculate_de.po  plasma_applet_qalculate_en.po  plasma_applet_qalculate_es.po  plasma_applet_qalculate_hr.po  plasma_applet_qalculate_pt.po
